2017-10-24  Bruno Haible  <bruno@clisp.org>

	Improve code structure.
	* foreign.d: Reorder functions, to avoid forward declarations.
	* subr.d: Update.
	* constsym.d: Update.

2017-10-24  Bruno Haible  <bruno@clisp.org>

	Code style.
	* foreign.d: Use 'var' for local variable declarations.

2017-10-24  Bruno Haible  <bruno@clisp.org>

	Fix compilation errors on HP-UX (regression from 2008-03-12).
	* unix.d: On HP-UX, undefine also HAVE_DLADDR etc.
	* foreign.d (foreign_library_variable, foreign_library_function):
	Fix declaration to match the one on the other platforms.

2017-10-24  Bruno Haible  <bruno@clisp.org>

	Don't assume that /dev/fd[012] exists on AIX and HP-UX.
	* stream.d (handle_pathname): On AIX and HP-UX, return NIL.
	* makemake.in (check-script): Don't run unportable test on AIX and
	HP-UX.

2017-10-24  Bruno Haible  <bruno@clisp.org>

	Fix the error message of TRUENAME on a nonexistent file.
	* pathname.d (my_realpath): Define always.
	(realpath_is_my_realpath): New macro.
	(realpath_obj): Invoke realpath, then my_realpath in case of error
	ENOENT.

2017-10-23  Bruno Haible  <bruno@clisp.org>

	Fix an endless recursion during "make check" on AIX.
	* stream.d (IS_EINVAL_EXTRA): On AIX, include the ENODEV errors.

2017-10-23  Bruno Haible  <bruno@clisp.org>

	Fix a "make check" hang on AIX.
	* makemake.in (check-script): Work around an AIX peculiarity.

2017-10-23  Bruno Haible  <bruno@clisp.org>

	Make intparam.c compile with g++ >= 6.
	Reported by Sam Steingold at <https://sourceforge.net/p/clisp/bugs/709>.
	* intparam.c (main9, get_stack_direction): Don't use the C keyword
	'auto'.

2017-10-22  Bruno Haible  <bruno@clisp.org>

	Avoid link errors when passing -DNO_ARI_ASM or -DNO_SP_ASM in CPPFLAGS.
	* makemake.in (ARI_ASMD, ARI_ASMS): Test whether XCFLAGS or XCPPFLAGS
	contains -DNO_ARI_ASM. Don't test for --enable-portability directly.
	(SP_ASMS, SP_ASMD): Test whether XCFLAGS or XCPPFLAGS contains